@@ -88,7 +88,7 @@ public class EventIDParameter extends ScalarParameter
     /** set the value  the parameter */
     public boolean setValue(String valueAsString)
     {
-	if (valueAsString.length()==0) {
+	if (valueAsString==null||valueAsString.length()==0) {
 	    isValueSet = false;
 	    runNumber  = null;
 	    evtNumber  = null;
